--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styles": "^5.15.15",
+    "@sanity/client": "^6.18.2",
+    "@sanity/image-url": "^1.0.2",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
